# master-research

./: .env  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  tmp.py
.container/: Dockerfile  docker-compose.yaml
conf/: config.yaml  fma.yaml  guitar_set.yaml
conf/data/: fma_medium.yaml  fma_small.yaml  guitar_set.yaml  guitar_set_pp.yaml  guitar_set_pp_bigvgan.yaml  medium.yaml  small.yaml
conf/data/transform/: bigvgan_mel.yaml  mel.yaml  mel_waveform.yaml  reassigned.yaml  reassigned_waveform.yaml
conf/infer/: default.yaml  unet_bigvgan.yaml  unet_diffwave.yaml
conf/mel/: default.yaml
conf/model/: diffwave.yaml  diffwave_large.yaml  fma_unet.yaml  unet.yaml
conf/preprocess/: guitar_set.yaml
conf/train/: default.yaml  local.yaml
script/: clean.ps1  clean.sh  inference.py  main.py  set_alias.ps1  set_alias.sh  shell_setup.sh
src/: config.py  hello.py  inference.py  main.py  pipeline.py  plot.py  train.py  transforms.py  types_.py  utils.py
src/callback/: discord.py  neptune.py  optimizer_hooks.py
src/cli/: doctor.py  infer.py  preprocess.py  train.py
src/datasets/: resampler.py  splitter.py
src/datasets/fma/: datamodule.py  dataset.py
src/datasets/guitar_set/: annotation.py  datamodule.py  dataset.py
src/fma/: datamodule.py  dataset.py  metadata.py  types.py
src/guitar_set/: datamodule.py  dataset.py
src/loader/: audio_loader.py  csv_loader.py
src/module/: logger.py  model_logger.py
src/module/callback/: discord.py
src/module/data/: datamodule.py  dataset.py  metadata.py
src/module/logger/: unet.py
src/module/model/: model.py  unet.py
src/music_controlnet/: callbacks.py  pipeline.py  plot.py  transforms.py
src/music_controlnet/loader/: audio_loader.py
src/music_controlnet/module/: inference_callbacks.py  model_logger.py  unet.py
src/music_controlnet/module/data/: datamodule.py  dataset.py  metadata.py
src/music_controlnet/module/model/: unet.py
src/music_controlnet/script/: inference.py  train.py
src/preprocess/: guitar_set.py  splitter.py
src/script/: config.py  inference.py  inference_callbacks.py  train.py
src/tool/: clean.py  config.py  datamodule.py  dataset.py  doctor.py  factory.py  functions.py  inference.py  pipeline.py  plot.py  preprocess.py  train.py  transforms.py
src/tool/cli/: doctor.py  infer.py  preprocess.py  train.py
src/transform/: to_mono.py  trim_or_pad.py
src/transforms/: db.py  dict.py  functions.py  mel.py  normalize.py  reassign.py  stft.py  util.py
src/vocoder/: callbacks.py
src/vocoder/module/: diffwave.py  music_hifi.py
src/vocoder/music_hifi/: activation.py  discriminator.py  generator.py  loss.py
tests/: test_bigvgan.py  test_config.py  test_fma.py  test_functions.py  test_guitar_set.py  test_module.py  test_plot.py  test_train.py  test_transforms.py  utils.py
